--- a/class-13-local_storage--ui_ux/demo-local_storage/style.css
+++ b/class-13-local_storage--ui_ux/demo-local_storage/style.css
@@ -1,20 +1,14 @@
-* {
-  border: 1px solid black;
-  }
-
-body {
-  font-family: Helvetica, sans-serif;
-  color: purple;
-  /*background-color: black*/
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-button {
-  background-color: purple;
-  color: white;
-  border-radius: 10px;
-  font-size: 1.1em;
+#display {
+  display: flex;
+  justify-content: space-around;
 }
 
-.inline-p {
-  display: inline;
+#chart-section {
+  width: 500px;
 }
